# spatio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  STATUS.md  benchmark_comparison.py  benchmark_comparison_concurrent.py  benchmark_geo42_only.py  benchmark_geo42_only_concurrent.py  docker-compose.yml  lib.rs  profile_geo42.py  spatio.toml  test_phase1.sh  verify_refactor.sh
.cargo/: config.toml
.github/workflows/: docker-publish.yml
benches/: performance.rs  quick_bench.rs
benchmark/: benchmark_comparison.py  benchmark_comparison_concurrent.py  benchmark_geo42_only.py  benchmark_geo42_only_concurrent.py
client/: cli_args.rs  client_connection.rs  formatter.rs  mod.rs
commands/: args.rs  basic.rs  delete.rs  drop.rs  get.rs  intersects.rs  keys.rs  mod.rs  nearby.rs  registry.rs  set.rs
config/: default.toml  mod.rs
docs/: ASYNC_RTREE_GUIDE.md  CLIENT_GUIDE.md  DELETION_STRATEGY.md  aof-implementation-plan.md
docs/context_md/: DATA_UPDATE.md  DRAG_UPDATE.md  PHASE1_SUMMARY.md
examples/: generate_json.rs  persistence_demo.rs
geo42/: Cargo.toml
geo42/src/: lib.rs  main.rs
geo42/src/client/: cli_args.rs  client_connection.rs  formatter.rs  mod.rs  sync_connection.rs
geo42/src/commands/: args.rs  basic.rs  get.rs  intersects.rs  mod.rs  registry.rs  set.rs
geo42/src/protocol/: response.rs
geo42/src/server/: connection.rs  mod.rs  server_connection.rs  tcp_server.rs
geo42/src/storage/: geo_utils.rs  geometry_utils.rs  mod.rs  storage.rs  storage_new.rs
protocol/: mod.rs  parser.rs  response.rs
rtree/: Cargo.toml  data.json  mod.rs  node.rs  rectangle.rs  rtree.rs
rtree/algorithms/: aof.rs  debug.rs  delete.rs  insert.rs  knn.rs  mod.rs  persistence.rs  search.rs  split.rs  utils.rs
rtree/benches/: performance.rs  quick_bench.rs  quick_bench_fixed.rs  simple_bench.rs
rtree/docs/context_md/: PHASE3_SUMMARY.md
rtree/examples/: async_concurrent_demo.rs  concurrent_demo.rs
rtree/src/: algorithms_old.rs  lib.rs  node.rs  rtree.rs
rtree/src/algorithms/: async_concurrent.rs  concurrent.rs  debug.rs  delete.rs  insert.rs  mod.rs  persistence.rs  search.rs  split.rs  utils.rs
rtree/visualization/example_data/: complex_tree.json  simple_tree.json  uniform_data.json
rtree/visualization/web/: index.html
server/: mod.rs  server_connection.rs  tcp_server.rs
src/: algorithms.rs  algorithms_old.rs  lib.rs  node.rs  rectangle.rs  rtree.rs
src/algorithms/: debug.rs  insert.rs  mod.rs  persistence.rs
storage/: geo_utils.rs  geometry_utils.rs  mod.rs  storage.rs
visualization/example_data/: clustered_data.json
visualization/web/: rtree-visualizer.js  style.css
