[package]
name = "rtree"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"

[[bench]]
name = "performance"
harness = false

[[bin]]
name = "quick_bench"
path = "benches/quick_bench.rs"

[[bin]]
name = "simple_bench"
path = "benches/simple_bench.rs"
