[package]
name = "geo42"
version = "0.1.0"
edition = "2021"
default-run = "geo42-server"

[lib]
name = "geo42"
path = "lib.rs"

[[bin]]
name = "geo42-server"
path = "bin/geo42-server.rs"

[[bin]]
name = "geo42-cli"
path = "bin/geo42-cli.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
geo = "0.28"
geojson = "0.24"
bincode = "1.3"
thiserror = "1.0"
rand = "0.8"
derive_more = "0.99"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
