[package]
name = "spatio"
version = "0.1.0"
edition = "2021"
default-run = "spatio-server"
description = "A high-performance geospatial database written in Rust"
license = "MIT"

[lib]
name = "spatio"
path = "lib.rs"

[[bin]]
name = "spatio-server"
path = "bin/spatio-server.rs"

[[bin]]
name = "spatio-cli"
path = "bin/spatio-cli.rs"

[[bin]]
name = "test-resp"
path = "bin/test-resp.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
geo = "0.31"
geojson = "0.24"
bincode = "1.3"
thiserror = "1.0"
rand = "0.8"
derive_more = "0.99"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
