[package]
name = "geo42"
version = "0.1.0"
edition = "2021"
default-run = "geo42-server"

[[bin]]
name = "geo42-server"
path = "src/bin/geo42-server.rs"

[[bin]]
name = "geo42-cli"
path = "src/bin/geo42-cli.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
rtree = { path = "../rtree" }
geo = "0.28"
geojson = "0.24"
