[package]
name = "rtree"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
rand = "0.8"
tokio = { version = "1.0", features = ["sync", "time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "quick_bench"
harness = false

[[bench]]
name = "simple_bench"
harness = false
