[package]
name = "rtree"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
rand = "0.8"
tokio = { version = "1.0", features = ["sync", "time"] }
geo = "0.28"
geojson = "0.24"
derive_more = "0.99"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }

